--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,16 @@
 Package: datasenadomx
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Data Senado MX
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Mauricio B. Garcia Tec
+Maintainer: Mauricio B. Garcia Tec <mgarciat@cism.mx>
+Description: Utilities to fetch voting information from Mexico's Senate
+Imports: 
+  rvest (>= 0.3.0),
+  stringi (>= 1.1.2),
+  stringr (>= 1.2.0)
+  dplyr (>= 0.5.0),
+  tidyr (>= 0.6.2)
+License: MIT
 Encoding: UTF-8
 LazyData: true
