--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,13 @@ Version: 0.1.0
 Author: Mauricio B. Garcia Tec
 Maintainer: Mauricio B. Garcia Tec <mgarciat@cism.mx>
 Description: Utilities to fetch voting information from Mexico's Senate
-Imports: 
-  rvest (>= 0.3.0),
-  stringi (>= 1.1.2),
-  stringr (>= 1.2.0),
-  dplyr (>= 0.5.0),
-  tidyr (>= 0.6.2)
+Imports:
+    rvest (>= 0.3.0),
+    stringi (>= 1.1.2),
+    stringr (>= 1.2.0),
+    dplyr (>= 0.5.0),
+    tidyr (>= 0.6.2)
 License: MIT
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 5.0.1
