--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,14 +3,16 @@ Type: Package
 Title: Data Senado MX
 Version: 0.1.0
 Author: Mauricio B. Garcia Tec
-Maintainer: Mauricio B. Garcia Tec <mgarciat@cism.mx>
+Maintainer: Mauricio B. Garcia Tec <mauriciogtec@outlook.com>
 Description: Utilities to fetch voting information from Mexico's Senate
 Imports:
     rvest (>= 0.3.0),
     stringi (>= 1.1.2),
     stringr (>= 1.2.0),
     dplyr (>= 0.5.0),
-    tidyr (>= 0.6.2)
+    tidyr (>= 0.6.2),
+    shiny (>= 1.0.5),
+    progress (>= 1.1.2)
 License: MIT
 Encoding: UTF-8
 LazyData: true
